fix card title alignment

--- a/index.css
+++ b/index.css
@@ -221,12 +221,13 @@
 }
 
 .tratamiento-card {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
     margin-bottom: 1rem;
     width: 28%;
+    text-align: center;
 }
 
 .tratamiento-card:hover {
@@ -240,6 +241,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 50%;
+    margin: 0 auto;
 }
 
 .tratamiento-img {
@@ -258,9 +260,18 @@
     width: 100%;
 }
 
+.card-title-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+}
+
 .card-title {
     color: #A5832E;
-    font-size: 1.4rem
+    font-size: 1.4rem;
+    margin: .5em auto;
 }
 
 .card-content {
